...
                    Spacer()
                    Button{
                        self.viewModel.save()
                        self.viewModel.isPresented.wrappedValue.toggle()
                    } label: {
                        Text("Done")
                    }.accessibilityIdentifier("FilterViewCloseCategories")
                }
                Text("Select one or more categories to visualize").font(.callout).padding(.top)
                    .foregroundColor(Color("PrimaryLabel")).accessibilityIdentifier("FilterViewSelectMoreCategories")
                List{
                    Section{
                        ForEach(self.viewModel.categories, id: \.self) { category in
                            FilterCellView(title: category.capitalizingFirstLetter(), isSelected: self.viewModel.selected.contains(category)) {
                                if self.viewModel.selected.contains(category) {
                                    self.viewModel.selected.removeAll(where: {$0 == category})
...
