...
    
    var body: some View {
        ZStack{
            Color("BackgroundColor").ignoresSafeArea(.all)
                GeometryReader{ geometry in
                        VStack{
                            Text(viewModel.categoryFilters.joined(separator: ", ")).font(.caption).foregroundColor(Color("PrimaryLabel")).accessibilityIdentifier("SeeAllViewCategoryFilterText")
                            
                            if(viewModel.categoryFilters.count > 0){
                                DoubleInfiniteList(data: $viewModel.filteredProducts, isLoading: $viewModel.isLoading, loadMore: viewModel.loadMore ){contentIndex in
                                    NavigationLink{
                                        iPadProductView(product: viewModel.filteredProducts[contentIndex])
                                    } label: {
...
            .toolbar(content: {
                Button{
                    viewModel.showFilterView.toggle()
                }  label: {
                    Image(systemName: "line.3.horizontal.decrease")
                }.foregroundColor(Color("PrimaryLabel"))
                    .accessibilityIdentifier("SeeAllViewCategoriesButton")
            })
            .sheet(isPresented: $viewModel.showFilterView) {
                FilterView(isPresented: $viewModel.showFilterView, selectedCategories: $viewModel.categoryFilters)
            }
    }
}
...
