...
                                Text("Most tracked").font(Font.system(size: 20).bold()).foregroundColor(Color("PrimaryLabel")).accessibilityIdentifier("HomeViewMostTrackedText")
                                Spacer()
                                NavigationLink {
                                    SeeAllView(apiUrl: AppConstant.getMostTrackedPaging + "?limit=20&page=0", viewTitle: NSLocalizedString("Most tracked", comment: "Most tracked"))
                                } label: {
                                    Text("See All")
                                }.accessibilityIdentifier("HomeViewSeeAllButton")
                            }.padding(.horizontal)
                            ZStack{
                            VStack(spacing: 10) {
                                HGrid(numberOfRows: 3, numberOfItems: viewModel.mostTracked.count, elemPerRow: 1) { contentIndex in
                                    NavigationLink{
                                        ProductView(product: viewModel.mostTracked[contentIndex])
...
