...
                        }.frame(maxWidth: geometry.size.width > geometry.size.height ? (geometry.size.width/3)-10 : (geometry.size.width/2)-10).padding(.horizontal)
                    }
                        
                    
                    Spacer()
                    HStack{
                        Text("\(viewModel.product.price!, specifier: "%.2f") €").padding(.leading).font(.title3.bold()).foregroundColor(Color("PrimaryLabel")).accessibilityIdentifier("ProductViewiPadProductPrice")
                        Spacer()
                        Button{
                            if let url = URL(string: viewModel.product.link) {
                                UIApplication.shared.open(url)
                            }
                        } label: {
...
