...
                    VStack{
                        Image("login-image").resizable().frame(width: scaleImage(geom.size), height: scaleImage(geom.size), alignment: .center)
                    
                        VStack{
                            HStack{
                                Text("Login").font(.largeTitle.bold()).foregroundColor(Color("PrimaryLabel"))
                                    .accessibilityIdentifier("LoginViewLoginText")
                                Spacer()
                            }
                            
                            IconTextField(titleKey: "Email", text: $viewModel.email, icon: Image(systemName: "at"), foregroundColor: Color("PrimaryLabel")) { text in
                                return viewModel.isValidEmail(text)
                            }.autocapitalization(.none)
...
